# redirector-api

./: Dockerfile  LISENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypont.sh  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 3e5b8cfd7d4a_user.py  74f41706e282_performance.py  907eebbb213f_log_redirect_fix_nullable.py  a98a4bea1953_users.py  b1fa3f4c93a2_init.py  b8d6bdfce7e8_log_redirect.py
redirector/: __init__.py  __main__.py  auth.py  main.py  models.py  router.py  schemas.py  settings.py
redirector/api/: __init__.py  auth.py  auth_exceptions.py  base.py  redirects.py  tmp  v1.py
redirector/api/v2/: manage_links.py  manage_links_exceptions.py  manage_user_exceptions.py  manage_users.py  system.py  token_exchange.py
redirector/exceptions/: base.py  link.py  user.py
redirector/models/: __init__.py  base.py  link.py  user.py
