[project]
name = "redirector-api"
description = "API for redirector service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "fastapi-sqlalchemy>=0.2.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "user-agents>=2.2.0",
    "uvicorn>=0.35.0",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "oidc_exchange.__version__"}

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "*.py"

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
